# kana_teacher

./: __init__.py  __main__.py  cli.py  kana_teacher.spec  main.py  pyproject.toml  windows.py
app/: app_widgets.py  app_windows.py  main.py
kana_learning/: app_widgets.py  app_windows.py  kana.py  main.py
kana_teacher/: __init__.py  __main__.py  main.py  widgets.py  windows.py
notes/: app_flow.txt  app_purpose.txt  unused_start_profile_window.py
tests/: test_japanese_app.py  test_widgets.py  test_windows.py  window_tests.py
