[tool.poetry]
name = "japanese_app"
version = "0.1.0"
description = ""
authors = ["Dane Hade <danepres@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
playsound = "^1.2.2"
pillow = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
