[tool.poetry]
name = "kana_teacher"
version = "0.1.0"
description = "Tkinter app for Japanese kana learning and practice."
authors = ["Dane Hade <danepres@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
playsound = "^1.2.2"
pillow = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pyinstaller = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
